

<resources>
    <string name="app_name">HelloThere</string>
    <string name="hello_there">hello there</string>
    <string name="nav_title">Star Wars: Hello There</string>
    <string name="general_kenobi">general kenobi</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favourite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="obi_wan">Obi Wan</string>
    <string name="general_grevious">General Grievous</string>
    <string name="choose_a_voice">choose a voice</string>
    <string name="emperor_palpatine">Chancellor Palpatine</string>
    <string name="do_it">Do it</string>
    <string name="about">About</string>
    <string name="about_text">Hello There was made purely for fun.\n\n I am an Australian Computer Science student
        and a passionate Star Wars fan.\n\nPlanning to implement more voices, quotes, and features to this app along my journey to becoming a better developer.\n\n
        If you have any suggestions please feel free to email me:\nhellothereapp@gmail.com\n\n
        All voices and mp3 sounds belong to Lucasfilm and Disney. Copyright © Lucasfilm/Disney
    </string>


    <string name="mute_sound">Mute sound</string>
    <string name="no_i_am_your_farther">Your Father</string>
    <string name="darth_vader">Darth Vader</string>
    <string name="situation">Situation</string>
    <string name="coughing">Coughing</string>
    <string name="the_senate">The Senate</string>
    <string name="order66">Order 66</string>
    <string name="apology">Apology</string>
    <string name="lack_of_faith">Lack of Faith</string>
    <string name="no_vader">Noooo</string>
    <string name="yes">Yes</string>
    <string name="don_t_fail_me">Don\'t Fail Me</string>
    <string name="high_ground">High Ground</string>
    <string name="good_job">Good Job</string>
    <string name="goodbye">Goodbye</string>
    <string name="half_a_ship">Half a ship</string>
    <string name="first_step">First Step</string>
    <string name="goooood">Goooood</string>
    <string name="too_weak">Too Weak</string>
    <string name="share">Share</string>
</resources>