<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)  . All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item android:id="@+id/menu1"
            android:title="@string/general_kenobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOptionsItemSelected"
            android:textColor="@color/yellow"/>
        <item
            android:id="@+id/menu2"
            android:title="@string/general_grevious"
            android:layout_width="wrap_content"
            android:onClick="onOptionsItemSelected"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"/>
        <item
            android:id="@+id/menu3"
            android:title="@string/emperor_palpatine"
            android:layout_width="wrap_content"
            android:onClick="onOptionsItemSelected"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"/>
        <item
            android:id="@+id/menu4"
            android:title="@string/darth_vader"
            android:layout_width="wrap_content"
            android:onClick="onOptionsItemSelected"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"/>
    </group>
    <group android:menuCategory="secondary">
        <item
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOptionsItemSelected"
            android:textColor="@color/yellow"
            android:title="@string/about" />
    </group>
    <group />
</menu>