<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/i_am_your_father_gif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:src="@drawable/i_am_your_father"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_bar"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_am_your_father_gif">

        <LinearLayout
            android:id="@+id/lin_layout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/i_am_your_father_gif">

            <Button
                android:id="@+id/i_am_your_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/no_i_am_your_farther"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/apology_vader"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/apology"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/lack_of_faith_vader"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/lack_of_faith"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/yes_vader"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/yes"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/fail_me_vader"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/don_t_fail_me"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/noooo"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/no_vader"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />



        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>