<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/palpatineGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:src="@drawable/palpatine_gif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:id="@+id/scroll_bar"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palpatineGif">

        <LinearLayout
            android:id="@+id/lin_layout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/palpatineGif">

            <Button
                android:id="@+id/do_it"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/death_star"
                android:backgroundTint="@color/black"
                android:textSize="12sp"
                android:onClick="onClick"
                android:text="@string/do_it"
                android:textColor="@color/yellow"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/order_66_palpatine"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/death_star"
                android:backgroundTint="@color/black"
                android:textSize="12sp"
                android:onClick="onClick"
                android:text="@string/order66"
                android:textColor="@color/yellow"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/senate"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/death_star"
                android:backgroundTint="@color/black"
                android:textSize="12sp"
                android:onClick="onClick"
                android:text="@string/the_senate"
                android:textColor="@color/yellow"
                app:rippleColor="#FFDE06" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>