<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageViewGrevious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:src="@drawable/g_grevious"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_bar"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageViewGrevious">

        <LinearLayout
            android:id="@+id/lin_layout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/gifImageViewGrevious">

            <Button
                android:id="@+id/general_kenobi"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/general_kenobi"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/grevious_situation"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/situation"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

            <Button
                android:id="@+id/grevious_coughing"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/death_star"
                android:onClick="onClick"
                android:text="@string/coughing"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:rippleColor="#FFDE06" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>